--- a/TranslationReg/Content/MyAppStyles.css
+++ b/TranslationReg/Content/MyAppStyles.css
@@ -7,6 +7,13 @@
     display: none;
 }
 
+.titleLink {
+    margin: auto;
+    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 26px;
+    text-align: center;
+}
+
 .formContainer {
     margin-top: 20px;
     margin-bottom: 20px;
