--- a/TranslationReg/Views/DocStages/Create.cshtml
+++ b/TranslationReg/Views/DocStages/Create.cshtml
@@ -1,29 +1,38 @@
 ﻿@model TranslationRegistryModel.DocStage
 
 <div>
-    @using (Html.BeginForm())
+    @if (ViewBag.Available)
     {
-        @Html.AntiForgeryToken()
+        using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.DocumentId)
-            @Html.HiddenFor(model => model.DocFileId)
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.DocumentId)
+                @Html.HiddenFor(model => model.DocFileId)
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.WorkTypeId, "Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.WorkTypeId, "Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Добавить" class="btn btn-default" />
+                    </div>
                 </div>
             </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Добавить" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
+        }
+    }
+    else
+    {
+        <p>Все возможные стадии присутствуют.</p>
+        <p>Добавьте работу в существующие стадии.</p>
+        <p>Либо добавьте новые типы работ</p>
     }
     <hr />
 </div>
