--- a/TranslationReg/Views/Languages/List.cshtml
+++ b/TranslationReg/Views/Languages/List.cshtml
@@ -18,9 +18,10 @@
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.Name)</div>
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.ShortName)</div>
                 <div class="col-md-4">
-                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" href="/Languages/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
-                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" href="/Languages/Delete/@item.Id"
-                       class="btn btn-danger deleteBtn">Удалить</a>
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" 
+                       href="/Languages/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" 
+                       href="/Languages/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
                 </div>
             </div>
             <div id="language@(item.Id)" class="dynamicBlock"></div>
