--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -10,18 +10,20 @@
         {
             <div class="myProp">
                 <div class="col-md-6">
-                    <h3>
-                        <a href="/Documents/DocAndStages/@doc.Id">@doc.Name</a>
-                    </h3>
+                    <a class="titleLink" href="/Documents/DocAndStages/@doc.Id">@doc.Name</a>
                 </div>
                 <div class="col-md-6">
-                    @Html.ActionLink("Скачать оригинал", "Download", "Documents", new { @filepath = doc.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-info" })
-                    @if (doc.FinalFile != null && !String.IsNullOrWhiteSpace(doc.FinalFile.Path))
-                    {
-                        @Html.ActionLink("Скачать готовый", "Download", "Documents", new { @filepath = doc.FinalFile.Path }, htmlAttributes: new { @class = "btn btn-info" })
-                    }
-                    <a class="btn btn-primary" href="/Documents/Edit/@doc.Id">Редактировать</a>
-                    <a class="btn btn-danger deleteBtn" href="/Documents/Delete/@doc.Id">Удалить</a>
+                    <div class="col-md-3">
+                        @Html.ActionLink("Скачать оригинал", "Download", "Documents", new { @filepath = doc.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-info" })
+                    </div>
+                    <div class="col-md-3">
+                        @if (doc.FinalFile != null && !String.IsNullOrWhiteSpace(doc.FinalFile.Path))
+                        {
+                            @Html.ActionLink("Скачать готовый", "Download", "Documents", new { @filepath = doc.FinalFile.Path }, htmlAttributes: new { @class = "btn btn-info" })
+                        }
+                    </div>
+                    <a class="col-md-3 btn btn-primary" href="/Documents/Edit/@doc.Id">Редактировать</a>
+                    <a class="col-md-3 btn btn-danger deleteBtn" href="/Documents/Delete/@doc.Id">Удалить</a>
                 </div>
             </div>
         }
