--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 @Html.ActionLink("Учет переводов", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav main-menu">
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Проекты", "Index", "Projects")</li>
                     <li>@Html.ActionLink("Документы", "Index", "Documents")</li>
