--- a/TranslationReg/Content/MyAppStyles.css
+++ b/TranslationReg/Content/MyAppStyles.css
@@ -3,6 +3,28 @@
     background-color: #e8e8e8; 
 }*/
 
+*{
+    padding: 0;
+    margin: 0;
+}
+
+html,
+body{
+    height: 100%;
+    position: relative;
+    padding-bottom: 58px;
+    background-color: #EEF1F5;
+}
+
+footer{
+    width: 100%;
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    height: 58px;
+    margin-left: -15px;
+}
+
 a,
 p{
     font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -30,16 +52,19 @@ p{
     }
 }
 
-.body-content{
-    padding: 
-}
-
 .navbar {
     background-color: #4D5B69;
 }
 
 .dynamicBlock{
     display: none;
+}
+
+.dynamicItem{
+    margin: 0 auto;
+    padding-top: 20px;
+    background-color: white;
+    border: 1px solid white;
 }
 
 .titleLink {
@@ -49,86 +74,163 @@ p{
     text-align: center;
 }
 
-.formContainer {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.dl-horizontal{
+    font-size: 22px;
+    margin-top: 30px;
 }
 
-.myForm {
-    margin-top: 10px;
-    padding: 10px 0;
+.dl-horizontal > dt{
+    width: 200px;
 }
 
-.myTitles {
+.dl-horizontal > dd{
+    margin-left: 210px;
+}
+
+/*--------------------Стили заголовков для таблиц-------------------------*/
+.titles{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 5px;
+    border: 2px solid darkgray;
+    border-radius: 4px 4px 0 0;
 }
-.myTitles > div {
+
+.titles > div{
     text-align: center;
     background-color: #d6d6d6;
     height: 55px;
     font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     line-height: 55px;
+    border-right: 2px solid darkgray;
 }
 
-.myProp {
+.titles > div:last-child{
+    border-right:none;
+}
+/*--------------------Стили заголовков для таблиц-------------------------*/
+
+/*-----------------------Стили элементов таблиц----------------------------*/
+.prorepties {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 5px;
+    border-right: 2px solid;
+    border-bottom: 2px solid;
+    border-left: 2px solid;
+    border-color: darkgray;
 }
-.myProp > div {
+
+.prorepties > div{
     padding: 10px 0;
     text-align: center;
     height: 55px;
     font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+    border-right: 2px solid darkgray;
 }
-.myProp:hover {
+
+.prorepties > div:last-child{
+    border-right: none;
+}
+
+.prorepties:hover{
     background-color: #e8e8e8;
 }
+/*-----------------------Стили элементов таблиц----------------------------*/
 
-
-.languageTitles {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 5px;
+@media screen and(max-width:479px){
+    .nav-tabs-responsive > li {
+        display: none;
+        width: 23%;
+    }
+    .nav-tabs-responsive > li > a {
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: normal;
+        width: 100%;
+        text-align: center;
+        vertical-align: top;
+      }
+      .nav-tabs-responsive > li.active {
+        width: 54%;
+      }
+      .nav-tabs-responsive > li.active:first-child {
+        margin-left: 23%;
+      }
+      .nav-tabs-responsive > li.active, .nav-tabs-responsive > li.prev, .nav-tabs-responsive > li.next {
+        display: block;
+      }
+      .nav-tabs-responsive > li.prev, .nav-tabs-responsive > li.next {
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+      }
+      .nav-tabs-responsive > li.next > a, .nav-tabs-responsive > li.prev > a {
+        -webkit-transition: none;
+        transition: none;
+      }
+      .nav-tabs-responsive > li.next > a .text, .nav-tabs-responsive > li.prev > a .text {
+        display: none;
+      }
+      .nav-tabs-responsive > li.next > a:after, .nav-tabs-responsive > li.next > a:after, .nav-tabs-responsive > li.prev > a:after, .nav-tabs-responsive > li.prev > a:after {
+        position: relative;
+        top: 1px;
+        display: inline-block;
+        font-family: "Glyphicons Halflings";
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      .nav-tabs-responsive > li.prev > a:after {
+        content: "\e079";
+      }
+      .nav-tabs-responsive > li.next > a:after {
+        content: "\e080";
+      }
+      .nav-tabs-responsive > li.dropdown > a > .caret {
+        display: none;
+      }
+      .nav-tabs-responsive > li.dropdown > a:after {
+        content: "\e114";
+      }
+      .nav-tabs-responsive > li.dropdown.active > a:after {
+        display: none;
+      }
+      .nav-tabs-responsive > li.dropdown.active > a > .caret {
+        display: inline-block;
+      }
+      .nav-tabs-responsive > li.dropdown .dropdown-menu.pull-xs-left {
+        left: 0;
+        right: auto;
+      }
+      .nav-tabs-responsive > li.dropdown .dropdown-menu.pull-xs-center {
+        right: auto;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+        transform: translateX(-50%);
+      }
+      .nav-tabs-responsive > li.dropdown .dropdown-menu.pull-xs-right {
+        left: auto;
+        right: 0;
+      }
 }
 
-.languageTitles > div{
-    width: 34%;
-    text-align: center;
-    background-color: #d6d6d6;
-    height: 55px;
-    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    line-height: 55px;
+@media (max-width: 479px) {
+    #narrow-browser-alert {
+      display: none;
+    }
 }
 
-.languageProp{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 5px;
-}
-
-.languageProp > div{
-    padding: 10px 0;
-    width: 33%;
-    text-align: center;
-    height: 55px;
-    font-family: Arial, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-}
-
-.languageProp:hover{
-    background-color: #e8e8e8;
+#docsTab{
+    margin-top: 30px;
 }
