--- a/TranslationReg/Views/Languages/List.cshtml
+++ b/TranslationReg/Views/Languages/List.cshtml
@@ -3,18 +3,18 @@
     <h2>Языки</h2>
 
     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguageForm"
-       href="/Languages/Create" class="btn btn-success createBtn">Добавить</a>
+       href="/Languages/Create" class="btn btn-primary createBtn">Добавить</a>
     <div id="addLanguageForm" class="dynamicBlock"></div>
 
     <div class="container myForm" id="languageEditor">
-        <div class="myTitles">
+        <div class="titles">
             <div class="col-md-4">@Html.Label("Наименование")</div>
             <div class="col-md-4">@Html.Label("Сокращение")</div>
             <div class="col-md-4">@Html.Label("Команды")</div>
         </div>
         @foreach (var item in Model)
         {
-            <div class="myProp">
+            <div class="prorepties">
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.Name)</div>
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.ShortName)</div>
                 <div class="col-md-4">
@@ -24,7 +24,7 @@
                        href="/Languages/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
                 </div>
             </div>
-            <div id="language@(item.Id)" class="dynamicBlock"></div>
+            <div id="language@(item.Id)" class="dynamicBlock dynamicItem"></div>
         }
     </div>
 </div>
