--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -4,24 +4,24 @@
 <h2>Проекты</h2>
 
 <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addProj"
-   href="/Projects/Create" class="btn btn-success createBtn">Добавить</a>
+   href="/Projects/Create" class="btn btn-primary createBtn">Добавить</a>
 <div id="addProj" class="dynamicBlock"></div>
 
 <div class="container myForm Pair" id="languageEditor">
-    <div class="languageTitles">
-        <div>@Html.Label("Название")</div>
-        <div>@Html.Label("Языковая пара")</div>
-        <div>@Html.Label("Команды")</div>
+    <div class="titles">
+        <div class="col-md-4">@Html.Label("Название")</div>
+        <div class="col-md-4">@Html.Label("Языковая пара")</div>
+        <div class="col-md-4">@Html.Label("Команды")</div>
     </div>
 
     @foreach (var project in Model)
     {
-        <div class="languageProp">
-            <div><a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a></div>
+        <div class="prorepties">
+            <div class="col-md-4"><a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a></div>
 
-            <div>@Html.DisplayFor(modelItem => project.LanguagePair.Name)</div>
+            <div class="col-md-4">@Html.DisplayFor(modelItem => project.LanguagePair.Name)</div>
 
-            <div>
+            <div class="col-md-4">
                 <a href="/Projects/Details/@project.Id" class="btn btn-info">Открыть</a>
                 <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
                 <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@project.Id"
