--- a/TranslationReg/Views/Projects/TabPages.cshtml
+++ b/TranslationReg/Views/Projects/TabPages.cshtml
@@ -1,29 +1,50 @@
 ﻿@model TranslationRegistryModel.Project
 
-<button id="detailsBtn">Детали</button>
-<button id="docsBtn">Документы</button>
+<h1>@Model.Name</h1>
 
-<div id="detailsTab">
-    @Html.Partial("../Projects/DetailsShort", Model)
+<div class="tab-page">
+    <ul class="nav nav-tabs nav-tabs-responsive" role="tablist">
+        <li class="active" role="presentation"><a href="#detailsTab" id="detailsBtn" data-toggle="tab">Детали</a></li>
+        <li class="next" role="presentation"><a href="#docsTab" id="docsBtn" data-toggle="tab">Документы</a></li>
+    </ul>
+
+    <div id="tabs-container" class="tab-content">
+        <div class="tab-pane fade in active" role="tabpanel" id="detailsTab" aria-labelledby="detailsTab-tab">
+            @Html.Partial("../Projects/DetailsShort", Model)
+        </div>
+
+        <div class="tab-pane fade" role="tabpanel" id="docsTab" aria-labelledby="docsTab-tab">
+            @Html.Partial("../Projects/Documents", Model)
+        </div>
+    </div>
 </div>
 
-<div id="docsTab" class="dynamicBlock">
-    @Html.Partial("../Projects/Documents", Model)
-</div>
+
 
 @section scripts {
     <script>
-        $(document).ready(function () {
-            $("#detailsBtn").click(function () {
-                $("#detailsTab").show("100");
-                $("#docsTab").hide("100");
-            });
-        });
-        $(document).ready(function () {
-            $("#docsBtn").click(function () {
-                $("#detailsTab").hide("100");
-                $("#docsTab").show("100");
-            });
+        $(document).on('show.bs.tab', '.nav-tabs-responsive [data-toggle="tab"]', function (e) {
+            var $target = $(e.target);
+            var $tabs = $target.closest('.nav-tabs-responsive');
+            var $current = $target.closest('li');
+            var $parent = $current.closest('li.dropdown');
+            $current = $parent.length > 0 ? $parent : $current;
+            var $next = $current.next();
+            var $prev = $current.prev();
+            var updateDropdownMenu = function ($el, position) {
+                $el
+                    .find('.dropdown-menu')
+                    .removeClass('pull-xs-left pull-xs-center pull-xs-right')
+                    .addClass('pull-xs-' + position);
+            };
+
+            $tabs.find('>li').removeClass('next prev');
+            $prev.addClass('prev');
+            $next.addClass('next');
+
+            updateDropdownMenu($prev, 'left');
+            updateDropdownMenu($current, 'center');
+            updateDropdownMenu($next, 'right');
         });
     </script>
 }
