--- a/TranslationReg/Views/User_Stage/List.cshtml
+++ b/TranslationReg/Views/User_Stage/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<TranslationRegistryModel.User_Stage>
 <div>
-    <div class="myTitles">
+    <div class="titles">
         <div class="col-md-3">Пользователь</div>
         <div class="col-md-3">Количество (слов)?</div>
         <div class="col-md-3">Дата загрузки</div>
