--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -1,58 +1,49 @@
 ﻿@model TranslationReg.Models.DocumentModel
+<div class="formContainer">
 
-@{
-    ViewBag.Title = "Создание документа";
-}
+    @using (Html.BeginForm("Create", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-horizontal">
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-<h2>Добавить документ</h2>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Document.ProjectId, "Проект", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
+            <div class="form-group">
+                @Html.Label("Файл оригинала", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input type="file" name="originalFile" />
+                </div>
+            </div>
 
-@using (Html.BeginForm("Create", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.AntiForgeryToken()
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.Label("Конечный файл (*если готов)", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input type="file" name="finalFile" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Добавить" class="btn btn-default" />
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Document.ProjectId, "Проект", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Файл оригинала", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" name="originalFile" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Конечный файл (*если готов)", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" name="finalFile" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Добавить" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Назад к списку", "Index")
+    }
 </div>
 
 @section Scripts {
