--- a/TranslationReg/Views/Documents/DocAndStages.cshtml
+++ b/TranslationReg/Views/Documents/DocAndStages.cshtml
@@ -1,18 +1,48 @@
 ﻿@model TranslationRegistryModel.Document
 <div>
 
-    @Html.Partial("../Documents/Details", Model)
+    <h2>@Model.Name</h2>
+    <dl class="dl-horizontal">
+        <dt>
+            Создатель
+        </dt>
+        <dd>
+            @Model.Owner.Name
+        </dd>
+
+        <dt>
+            Скачать оргигинал
+        </dt>
+        <dd>
+            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="glyphicon glyphicon-download"></a>
+        </dd>
+
+        <dt>
+            Скачать перевод
+        </dt>
+        <dd>
+            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
+        </dd>
+    </dl>
 
     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocStageForm"
        href="/DocStages/Create/@Model.Id" class="btn btn-primary createBtn">Добавить стадию</a>
     <div id="addDocStageForm" class="dynamicBlock"></div>
 
+
+    <div class="titles">
+        <div class="col-md-4">@Html.Label("Стадия")</div>
+        <div class="col-md-4">@Html.Label("Добавить работу")</div>
+        <div class="col-md-4">@Html.Label("Удалить стадию")</div>
+    </div>
     <div>
         @foreach (var stage in Model.Stages)
         {
             @Html.Partial("../DocStages/Item", stage)
         }
     </div>
+
+
 </div>
 
 @section scripts {
