--- a/TranslationReg/Views/Languages/Create.cshtml
+++ b/TranslationReg/Views/Languages/Create.cshtml
@@ -1,7 +1,5 @@
-﻿<div class="formContainer">
-    <hr />
-    @model TranslationRegistryModel.Language
-
+﻿@model TranslationRegistryModel.Language
+<div class="formContainer">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
@@ -9,23 +7,23 @@
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-5" })
-                <div class="col-md-7">
+                @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label  col-md-2" })
+                <div class="col-md-10">
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ShortName, "Сокращение", htmlAttributes: new { @class = "control-label col-md-5" })
-                <div class="col-md-7">
+                @Html.LabelFor(model => model.ShortName, "Сокращение", htmlAttributes: new { @class = "control-label  col-md-2" })
+                <div class="col-md-10">
                     @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                <div class="col-md-offset-5 col-md-10">
+                <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Сохранить" class="btn btn-default" />
                 </div>
             </div>
