--- a/TranslationReg/Views/Projects/TabPages.cshtml
+++ b/TranslationReg/Views/Projects/TabPages.cshtml
@@ -46,5 +46,29 @@
             updateDropdownMenu($current, 'center');
             updateDropdownMenu($next, 'right');
         });
+
+        $(document).ready(function () {
+            $(".createBtn").click(function () {
+                $(this).toggleClass('active');
+                updatedBlock = $(this).attr("data-ajax-update");
+                $(updatedBlock).toggle("fast");
+            });
+        });
+
+        $(".deleteBtn").on("click", function (e) {
+            e.preventDefault();
+            $("<div></div>")
+                .addClass("dialog")
+                .appendTo("body")
+                .dialog({
+                    height: 300,
+                    width: 500,
+                    title: $(this).attr("data-dialog-title"),
+                    close: function () { $(this).remove() },
+                    modal: true
+                })
+                .load(this.href);
+        });
     </script>
 }
+       
