--- a/TranslationReg/Content/MyAppStyles.css
+++ b/TranslationReg/Content/MyAppStyles.css
@@ -8,21 +8,28 @@
     margin: 0;
 }
 
-html,
-body{
+html{
     height: 100%;
+}
+
+
+body{
+    min-height: 100%;
     position: relative;
-    padding-bottom: 58px;
     background-color: #EEF1F5;
 }
 
+body::after{ 
+    content:''; 
+    display:block; 
+    height:100px; 
+}
+
 footer{
+    position: absolute;
+    height: 100px;
     width: 100%;
     padding: 20px;
-    position: absolute;
-    bottom: 0;
-    height: 58px;
-    margin-left: -15px;
 }
 
 a,
