--- a/TranslationReg/Views/Documents/DocAndStages.cshtml
+++ b/TranslationReg/Views/Documents/DocAndStages.cshtml
@@ -17,12 +17,15 @@
             <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="glyphicon glyphicon-download"></a>
         </dd>
 
-        <dt>
-            Скачать перевод
-        </dt>
-        <dd>
-            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
-        </dd>
+        @if (Model.FinalFile != null)
+        {
+            <dt>
+                Скачать перевод
+            </dt>
+            <dd>
+                <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
+            </dd>
+        }
     </dl>
 
     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocStageForm"
