--- a/TranslationReg/Views/DocStages/Item.cshtml
+++ b/TranslationReg/Views/DocStages/Item.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TranslationRegistryModel.DocStage
 
-<div class="prorepties">
+<div class="properties">
     <div class="col-md-4"><b>@Model.WorkType.Name</b></div>
     <div class="col-md-4">
         <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addUserStageForm@(Model.Id)"
