--- a/TranslationReg/Views/Documents/Index.cshtml
+++ b/TranslationReg/Views/Documents/Index.cshtml
@@ -40,7 +40,7 @@
 
 @foreach (var item in Model)
 {
-    <div class="prorepties">
+    <div class="properties">
         <div class="col-md-3">
             @Html.DisplayFor(modelItem => item.Name)
         </div>
