--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -17,7 +17,7 @@
     </div>
     @foreach (var item in Model)
     {
-        <div class="prorepties">
+        <div class="properties">
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.OriginalLanguage.Name)</div>
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.TranslationLanguage.Name)</div>
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.Name)</div>
