--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -15,7 +15,7 @@
         </div>
         @foreach (var doc in Model.Documents)
         {
-            <div class="prorepties">
+            <div class="properties">
                 <div class="col-md-3">
                     <a class="titleLink" href="/Documents/DocAndStages/@doc.Id">@doc.Name</a>
                 </div>
