--- a/TranslationReg/Views/User_Stage/Item.cshtml
+++ b/TranslationReg/Views/User_Stage/Item.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TranslationRegistryModel.User_Stage
 
 <div>
-    <div class="prorepties">
+    <div class="properties">
         <div class="col-md-3">@Html.DisplayFor(modelItem => Model.User.Name)</div>
         <div class="col-md-3">@Html.DisplayFor(modelItem => Model.Amount)</div>
         <div class="col-md-3">@Html.DisplayFor(modelItem => Model.DocFile.Date)</div>
