--- a/TranslationReg/Views/Documents/Details.cshtml
+++ b/TranslationReg/Views/Documents/Details.cshtml
@@ -20,7 +20,11 @@
             Скачать перевод
         </dt>
         <dd>
-            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
+            @if (Model.FinalFile!= null && !String.IsNullOrWhiteSpace(Model.FinalFile.Path))
+    {
+        <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
+
+}
         </dd>
     </dl>
 </div>
