--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -10,7 +10,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" , required = "required "} })
                     @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
