--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -3,76 +3,25 @@
 
 <h2>Проекты</h2>
 
-<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addProj"
-   href="/Projects/Create" class="btn btn-primary createBtn">Добавить</a>
-<div id="addProj" class="dynamicBlock"></div>
-
-<div class="container myForm Pair" id="languageEditor">
-    <div class="titles">
-        <div class="col-md-4">@Html.Label("Название")</div>
-        <div class="col-md-4">@Html.Label("Языковая пара")</div>
-        <div class="col-md-4">@Html.Label("Команды")</div>
+<div class="container">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
     </div>
-
-    @foreach (var project in Model)
-    {
-        <div class="properties">
-            <div class="col-md-4"><a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a></div>
-
-            <div class="col-md-4">@Html.DisplayFor(modelItem => project.LanguagePair.Name)</div>
-
-            <div class="col-md-4">
-                <a href="/Projects/Details/@project.Id" class="btn btn-info">Открыть</a>
-                <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@project.Id"
-                   href="/Projects/DetailsShort/@project.Id" class="btn btn-info detailsBtn">Детали</a>
-                <a data-ajax="true"
-                   href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
-            </div>
-        </div>
-        <div id="@(project.Id)" class="dynamicBlock"></div>
-    }
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li>@Html.ActionLink("Все проекты", "Index")</li>
+            <li>@Html.ActionLink("Проекты в работе", "Index")</li>
+            <li>@Html.ActionLink("Мои проекты", "Index")</li>
+            <li>@Html.ActionLink("Другой фильтр", "Index")</li>
+        </ul>
+    </div>
 </div>
 
-@section scripts {
-    <script>
-        $(document).ready(function () {
-            $(".editBtn").click(function () {
-                updatedBlock = $(this).attr("data-ajax-update");
-                // изначально display:none, описанов MyAppStyles.css
-                $(updatedBlock).toggle("fast");
-            });
-        });
-
-        $(document).ready(function () {
-            $(".createBtn").click(function () {
-                updatedBlock = $(this).attr("data-ajax-update");
-                // изначально display:none, описанов MyAppStyles.css
-                $(updatedBlock).toggle("fast");
-            });
-        });
-
-        $(document).ready(function () {
-            $(".detailsBtn").click(function () {
-                updatedBlock = $(this).attr("data-ajax-update");
-                // изначально display:none, описанов MyAppStyles.css
-                $(updatedBlock).toggle("fast");
-            });
-        });
-        
-        $(".deleteBtn").on("click", function (e) {
-            e.preventDefault();
-            $("<div></div>")
-                .addClass("dialog")
-                .appendTo("body")
-                .dialog({
-                    height: 300,
-                    width: 500,
-                    title: $(this).attr("data-dialog-title"),
-                    close: function () { $(this).remove() },
-                    modal: true
-                })
-                .load(this.href);
-        });
-    </script>
-}
+<div id="projectList">
+    @Html.Partial("List")
+</div>
