--- a/TranslationReg/Views/UnitOfMeasure/List.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/List.cshtml
@@ -4,7 +4,7 @@
     <h2>Единицы измерения</h2>
 
     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addUnitForm"
-       href="/WorkTypes/Create" class="btn btn-primary createBtn">Добавить</a>
+       href="/UnitOfMeasure/Create" class="btn btn-primary createBtn">Добавить</a>
     <div id="addUnitForm" class="dynamicBlock"></div>
 
     <div class="titles">
@@ -12,18 +12,18 @@
         <div class="col-md-6">@Html.Label("Описание")</div>
         <div class="col-md-3">@Html.Label("Команды")</div>
     </div>
-    @foreach (var workType in Model)
+    @foreach (var unitOfMeasure in Model)
     {
         <div class="properties">
-            <div class="col-md-3">@Html.DisplayFor(modelItem => workType.Name)</div>
-            <div class="col-md-6">@Html.DisplayFor(modelItem => workType.Description)</div>
+            <div class="col-md-3">@Html.DisplayFor(modelItem => unitOfMeasure.Name)</div>
+            <div class="col-md-6">@Html.DisplayFor(modelItem => unitOfMeasure.Description)</div>
             <div class="col-md-3">
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(workType.Id)"
-                   href="/WorkTypes/Edit/@workType.Id" class="btn btn-primary editBtn">Редактировать</a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(workType.Id)"
-                   href="/WorkTypes/Delete/@workType.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(unitOfMeasure.Id)"
+                   href="/UnitOfMeasure/Edit/@unitOfMeasure.Id" class="btn btn-primary editBtn">Редактировать</a>
+                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#unit@(unitOfMeasure.Id)"
+                   href="/UnitOfMeasure/Delete/@unitOfMeasure.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
             </div>
         </div>
-        <div id="unit@(workType.Id)" class="dynamicBlock dynamicItem"></div>
+        <div id="unit@(unitOfMeasure.Id)" class="dynamicBlock dynamicItem"></div>
     }
 </div>
